@@ -63,4 +63,5 @@ SharePoint Solution Installer Development V1 ChangeLog
  Test that SPFarm.Local is accessible early, & bail with msgbox if not
  Add solution version info above system checks
  Move solution version info into panel at bottom so always visible
- Add checkboxes for user to choose deactivate & activate in Repair/Remove cases
+ Add checkboxes for user to choose deactivate & activate
+   in Upgrade/Remove and in Repair/Remove cases
